  * Expand two-arg blocks on load.
  * More eye-candy by Sam Parkinson
  * Bad/missing thumbnails no longer break the Planet (Abhinav Anurag).
  * Restored booleanOneArg protoblocks.
  * Now adding store in blocks when needed on loading new projects.
  * Fixed one more corner case in auto-block expansion when loading new
    projects.
  * Split ever expanding boxes palette into boxes and actions palettes.
  * Added Named do blocks (similar to named boxes).
  * Allow for clicking on Action Blocks.
  * Use graphical error messages.

TODO:
  * Save errors
  * Display rubrics
  * More efficient until and while?
  * Save to javascript
  * Rtl support
  * Zoom and scroll?
  * Make expand an array, one element for each arg or slot
  * User-defined block types (trivial with factory)
  * Three-arg arg blocks (trivial with factory)
  * Artwork beautification?
  * Try to detect difference between unknown flow and arg blocks
  * What palette/block features from the Python version do we need to port?
  * Do we need to add support for plugins init, quit, etc.?
  * Better interoperability with Python version
  * Sugar datastore/toolbar support
  * Add city to long/city to lat block to gmap plugin.

FEATURE IDEAS:
  * Local variables? (e.g., boxes only defined inside an action?) Note that
    we can use turtlename to create instance variables.
  * Pass argments to actions? (and arg blocks to reference them)?
  * Arrays

KNOWN BUGS:
  * Find a scalable approach to drawing on the canvas
  * Not all blocks highlight when using step-by-step mode
  * Camera doesn't work on Android
  * Music block doesn't work on Android
  * Cannot open plugins loader on Android
  * Sometimes returning to backgrounded project results in empty project
  * Loading macros there is a funny collapsed state sometimes.
  * Sometimes the protoblock doesn't return to the palette after dragging.
  * Does not open in Safari.
  * Crashes the Browse activity on the XO.