@@ -287,6 +287,7 @@
   * Added Named do blocks (similar to named boxes).
   * Allow for clicking on Action Blocks.
   * Use graphical error messages.
+  * Fixed logic error when searching for turtles to run.
 
 TODO:
   * Save errors
